--- a/templates/music.html
+++ b/templates/music.html
@@ -65,7 +65,8 @@
       <p>
         one of my favorite works, an album done in one night in the wake of
         russian invasion of Ukraine as a desperate attempt to do
-        <em>something</em>, which wasn't much
+        <em>something</em>, which admittedly wasn't much. but the effort remains
+        etched into these.
       </p>
       {% if embeds %}
       <!--  -->
@@ -82,9 +83,8 @@
         >АНТИВОЕННОЕ ВЫСКАЗЫВАНИЕ by Позоры</a
       >
       {% endif %}
-
       <details>
-        <summary>some live videos (and even a documentary)</summary>
+        <summary>some live videos and even a short documentary</summary>
         <div>
           {% if embeds %}
           <!--  -->
@@ -159,8 +159,10 @@
         корабельные сосны
         <div role="doc-subtitle">
           2016 - pres. /
-          <a target="_blank" href="https://pinestobuildships.bandcamp.com">bandcamp</a> /
-          one-man-band, recording, mixing & mastering
+          <a target="_blank" href="https://pinestobuildships.bandcamp.com"
+            >bandcamp</a
+          >
+          / one-man-band, recording, mixing & mastering
         </div>
       </h2>
       <p>
@@ -196,7 +198,6 @@
         ></iframe
       >
       {% else %}
-
       <a target="_blank" href="https://pinestobuildships.bandcamp.com/album/--6"
         >пролог by корабельные сосны</a
       >
@@ -225,7 +226,7 @@
       {% endif %}
       <p>
         for a brief moment around 2018-2019 i tried playing live shows, which
-        are best summarized by this live
+        are best summarized by this video
       </p>
       {% if embeds %}
       <!--  -->
@@ -247,7 +248,7 @@
       >
       {% endif %}
       <details>
-        <summary>and some more</summary>
+        <summary>...and some more</summary>
         {% if embeds %}
         <!--  -->
         <iframe
@@ -275,8 +276,10 @@
         сукин сын
         <div role="doc-subtitle">
           2019 - 2023 /
-          <a target="_blank" href="https://huigniluye265.bandcamp.com/">bandcamp</a> / drums,
-          recording & mixing (in part)
+          <a target="_blank" href="https://huigniluye265.bandcamp.com/"
+            >bandcamp</a
+          >
+          / drums, recording & mixing (occasionally)
         </div>
       </h2>
       <p>
@@ -431,7 +434,7 @@
     <section>
       <h2>DJ PULSAR</h2>
       <details>
-        <summary>occasionally i DJ and here are some of my playlists</summary>
+        <summary>i occasionally DJ – here are some of my playlists</summary>
         {% if embeds %}
         <!--  -->
         <iframe
@@ -465,8 +468,8 @@
           loading="lazy"
         ></iframe>
         {% else %}
-        <a target="_blank"
-        
+        <a
+          target="_blank"
           href="https://open.spotify.com/playlist/3vh6pS77vxf6wf8KhyrE2q?si=a5a6d852775b46ac"
           >spotify</a
         >
@@ -499,18 +502,24 @@
       <h2>misc</h2>
       <ul>
         <li>
-          soundtrack and sound design for several small game jam projects (<a target="_blank"
+          soundtrack and sound design for several small game jam projects (<a
+            target="_blank"
             href="https://gasgiant.itch.io/piece"
             >one</a
-          >, <a target="_blank" href="https://gasgiant.itch.io/negation">two</a>,
-          <a target="_blank" href="https://gasgiant.itch.io/backup-shooter">three</a>,
-          <a target="_blank" href="https://gasgiant.itch.io/do-evilsh">four</a>), audio versions
-          are on
-          <a target="_blank" href="https://soundcloud.com/nj_vs_valhalla">soundcloud</a>
+          >,
+          <a target="_blank" href="https://gasgiant.itch.io/negation">two</a>,
+          <a target="_blank" href="https://gasgiant.itch.io/backup-shooter"
+            >three</a
+          >,
+          <a target="_blank" href="https://gasgiant.itch.io/do-evilsh">four</a
+          >), audio versions are on
+          <a target="_blank" href="https://soundcloud.com/nj_vs_valhalla"
+            >soundcloud</a
+          >
         </li>
         <li>
           <div>
-            ambient-ish outro track for an album by a emoviolence band Jautājums
+            ambient-ish outro track for an album by my friends' emoviolence band
           </div>
           {% if embeds %}
           <!--  -->
@@ -563,8 +572,8 @@
         </li>
 
         <li>
-          recording, mixing and mastering for noise sludge metal band "Уберлицо"
-          {% if embeds %}
+          recording, mixing and mastering for the noise sludge metal band
+          "Уберлицо" {% if embeds %}
           <!--  -->
           <iframe
             style="border: 0; width: 100%; height: 42px"
@@ -581,8 +590,9 @@
           {% endif %}
         </li>
         <li>
-          drums recording for industrial noise rock "Союз Озверелых" {% if
-          embeds %}
+          drums recording for industrial noise rock "Союз Озверелых"
+          <!--  -->
+          {% if embeds %}
           <!--  -->
           <iframe
             style="border: 0; width: 100%; height: 42px"
@@ -600,7 +610,7 @@
         </li>
         <li>
           <details>
-            <summary>drums at Moé for some time</summary>
+            <summary>for a while, drums at the screamo band "Moé"</summary>
             {% if embeds %}
             <!--  -->
             <iframe
