--- a/templates/music.html
+++ b/templates/music.html
@@ -7,7 +7,7 @@
       name="description"
       content="Igor Vaiman's personal website, portfolio, project collection and playground"
     />
-    <title>nj-vs-vh page</title>
+    <title>nj-vs-vh | music</title>
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="icon" href="/static/favicon.ico" />
   </head>
@@ -433,10 +433,22 @@
 
     <section>
       <h2>DJ PULSAR</h2>
+      i occasionally DJ
+      <img src="static/dj-pulsar.jpg" />
       <details>
-        <summary>i occasionally DJ – here are some of my playlists</summary>
+        <summary>here are some of my playlists</summary>
         {% if embeds %}
         <!--  -->
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/0fY4YdI6ZdtJU8iLjc9azt?utm_source=generator&theme=0"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
         <iframe
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/playlist/3vh6pS77vxf6wf8KhyrE2q?utm_source=generator&theme=0"
