--- a/templates/music.html
+++ b/templates/music.html
@@ -482,17 +482,22 @@
         {% else %}
         <a
           target="_blank"
-          href="https://open.spotify.com/playlist/3vh6pS77vxf6wf8KhyrE2q?si=a5a6d852775b46ac"
+          href="https://open.spotify.com/playlist/0fY4YdI6ZdtJU8iLjc9azt"
           >spotify</a
         >
         <a
           target="_blank"
-          href="https://open.spotify.com/playlist/5m9wTCIrkDK8Xj1zZqxb29?si=f5f798361c2b41d1"
+          href="https://open.spotify.com/playlist/3vh6pS77vxf6wf8KhyrE2q"
           >spotify</a
         >
         <a
           target="_blank"
-          href="https://open.spotify.com/playlist/5XWdOxdHuQYYokVsf7DylL?si=38a26e275d3c423a"
+          href="https://open.spotify.com/playlist/5m9wTCIrkDK8Xj1zZqxb29"
+          >spotify</a
+        >
+        <a
+          target="_blank"
+          href="https://open.spotify.com/playlist/5XWdOxdHuQYYokVsf7DylL"
           >spotify</a
         >
         {% endif %}
