--- a/templates/music.html
+++ b/templates/music.html
@@ -42,28 +42,29 @@
       </h2>
       <p>
         feminist noise punk, the most prominent band i had a luck to contribute
-        to. the band i played the most live shows. an album coming at some point
-        in the future.
+        to. also the band i played the most live shows with. i'm very proud of
+        our 2025 album – it was made through years of immigration, hiatus, uncertainties
+        and insecurities and it managed to come out funny, interesting and relevant.
       </p>
 
       {% if embeds %}
       <!--  -->
       <iframe
         style="border: 0; width: 100%; height: 42px"
-        src="https://bandcamp.com/EmbeddedPlayer/album=4158032550/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
+        src="https://bandcamp.com/EmbeddedPlayer/album=1365007319/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/"
         seamless
-        ><a href="https://pozori.bandcamp.com/album/--4"
-          >Женщина by Позоры</a
+        ><a href="https://pozori.bandcamp.com/album/2-2"
+          >2 Девичье 2 Горе by Позоры</a
         ></iframe
       >
       {% else %}
-      <a target="_blank" href="https://pozori.bandcamp.com/album/--4"
-        >Женщина by Позоры</a
+      <a href="https://pozori.bandcamp.com/album/2-2"
+        >2 Девичье 2 Горе by Позоры</a
       >
       {% endif %}
 
       <p>
-        one of my favorite works, an album done in one night in the wake of
+        one of my favorite works ever, an album done in one night in the wake of
         russian invasion of Ukraine as a desperate attempt to do
         <em>something</em>, which admittedly wasn't much. but the effort remains
         etched into these.
