--- a/templates/license_footer.html
+++ b/templates/license_footer.html
@@ -1,4 +1,4 @@
-<footer style="margin-top: 1rem; border-top: 1px solid rgb(184, 184, 184)">
+<footer style="margin-top: 1rem; border-top: 1px solid var(--light-gray)">
   <p
     xmlns:cc="http://creativecommons.org/ns#"
     xmlns:dct="http://purl.org/dc/terms/"
