--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -8,23 +8,22 @@
     <link rel="icon" href="/static/favicon.ico" />
   </head>
   <body>
-    {% match tag_filter %}
-      {% when Some with (tag_filter) %}
-        <header><a href="/">home</a> / <a href="/projects">projects</a> /</header>
-        <h1>{{tag_filter}}</h1>
-      {% when None %}
-        <header><a href="/">home</a> /</header>
-        <h1>projects</h1>
-        <p>
-          "project" is anything i worked on and consider worth describing. i just
-          like to keep a catalog of stuff i did for reference and perhaps to show
-          off a bit.
-        </p>
-        <p>newest -> oldest</p>
+    {% match tag_filter %} {% when Some with (tag_filter) %}
+    <header><a href="/">home</a> / <a href="/projects">projects</a> /</header>
+    <h1>{{tag_filter}}</h1>
+    {% when None %}
+    <header><a href="/">home</a> /</header>
+    <h1>projects</h1>
+    <p>
+      "project" is anything i worked on and consider worth describing, and is
+      describeable in a simple web page. i like to keep a catalog of stuff i did
+      for reference and perhaps to show off a bit.
+    </p>
+    <p>newest -> oldest</p>
     {% endmatch %}
     <ul>
       {% for ph in project_hyperlinks %}
-        <li>{{ ph|safe }}</li>
+      <li>{{ ph|safe }}</li>
       {% endfor %}
     </ul>
     {% include "license_footer.html" %}
