--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,28 @@
   </head>
   <body>
     <h1>hi, i'm Igor</h1>
-   <p>
-      this is a perpetually-under-construction place for me to document some of the stuff
-      i do.
-    </p>
     <p>
-      i do astroparticle physics, software on the web and around,
-      <a href="/music">music</a>, and other things.
+      this is a perpetually-under-construction place for me to document some of
+      the stuff i do:
+    </p>
+    <ul>
+      <li>
+        i'm a
+        <a
+          target="_blank"
+          href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor"
+          >PhD student</a
+        >
+        in astroparticle physics, mostly working with Cosmic Ray theory and phenomenology and trying to apply advanced statistical methods to get the most out of our observations
+      </li>
+      <li>
+        i make software on the web and around, mostly for
+        fun, but also for good causes as part of
+        <a target="_blank" href="https://baw.team/">baw team</a>
+      </li>
+      <li>i play and produce <a href="/music">music</a></li>
+      <li>occasionally i take photos</li>
+    </ul>
     </p>
     <h3>my projects</h3>
     <ul>
