some more bookkeeping, face added

--- a/templates/music.html
+++ b/templates/music.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% include "head_preamble.html" %}
+    <title>nj-vs-vh | music</title>
     <meta
       name="description"
       content="Igor Vaiman's personal website, portfolio, project collection and playground"
     />
-    <title>nj-vs-vh | music</title>
-    <link rel="stylesheet" href="/static/style.css" />
-    <link rel="icon" href="/static/favicon.ico" />
   </head>
   <body>
     <header><a href="/">home</a> /</header>
@@ -43,8 +40,9 @@
       <p>
         feminist noise punk, the most prominent band i had a luck to contribute
         to. also the band i played the most live shows with. i'm very proud of
-        our 2025 album – it was made through years of immigration, hiatus, uncertainties
-        and insecurities and it managed to come out funny, interesting and relevant.
+        our 2025 album – it was made through years of immigration, hiatus,
+        uncertainties and insecurities and it managed to come out funny,
+        interesting and relevant.
       </p>
 
       {% if embeds %}
@@ -209,7 +207,7 @@
         >Это вы by корабельные сосны</a
       >
       {% endif %}
-      <p>noise experiments etc</p>
+      <p>noise experiments, concrete music, diy synths and plugins etc</p>
       {% if embeds %}
       <!--  -->
       <iframe
@@ -280,7 +278,7 @@
           <a target="_blank" href="https://huigniluye265.bandcamp.com/"
             >bandcamp</a
           >
-          / drums, recording & mixing (occasionally)
+          / drums, recording & mixing
         </div>
       </h2>
       <p>
