--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% include "head_preamble.html" %}
     <title>nj-vs-vh | projects</title>
-    <link rel="stylesheet" href="/static/style.css" />
-    <link rel="icon" href="/static/favicon.ico" />
   </head>
   <body>
     {% match tag_filter %} {% when Some with (tag_filter) %}
