image metadata parsing and photo view

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,12 @@
 :root {
   --secondary-blue: rgb(128, 128, 255);
-  --light-gray: rgb(184, 184, 184)
+  --light-gray: rgb(184, 184, 184);
+  --main-column-width: min(700px, 95vw);
 }
 
 body {
   margin: 2rem auto;
-  width: min(700px, 95vw);
+  width: var(--main-column-width);
   font-family: 'Courier New', Courier, monospace;
 }
 
