--- a/templates/gallery_image.html
+++ b/templates/gallery_image.html
@@ -8,8 +8,56 @@
 </head>
 
 <body>
-  <img src="media/{{ image.filename }}" />
-  {% include "license_footer.html" %}
+  <div class="main-column">
+    <header><a href="/">home</a> / <a href="/gallery">gallery</a> /</header>
+    <div>
+      <img id="photo" src="media/{{ image.filename }}" />
+      <div style="display: flex; justify-content: space-between; gap: 2rem;">
+        {% match image.title %}
+        {% when Some with (title) %}
+        <span>{{title}}</span>
+        {% when None %}
+        {% endmatch %}
+        <!--  -->
+        <span>{{image.timestamp.date()}}</span>
+      </div>
+      {% include "license_footer.html" %}
+    </div>
+  </div>
 </body>
+
+
+
+<style>
+  body {
+    width: 95vw;
+  }
+
+  .main-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  img#photo {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    max-height: 75vh;
+  }
+
+  header,
+  .caption-container {
+    width: var(--main-column-width);
+  }
+</style>
+
+<!-- <script>
+  addEventListener(
+    "load",
+    (e) => {
+      document.getElementById("photo").scrollIntoView({ behavior: "smooth", block: "center" });
+    },
+  )
+</script> -->
 
 </html>
