basic gallery functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
       i'm a
       <a target="_blank" href="https://www.gssi.it/people/students/students-physics/item/24616-vaiman-igor">PhD
         student</a>
-      in astroparticle physics, mostly working with Cosmic Ray theory and phenomenology and trying to apply advanced
-      statistical methods to get the most out of our observations
+      in astroparticle physics working with Cosmic Ray theory and phenomenology and applying advanced
+      statistical methods to infer things about CR sources and propagation
     </li>
     <li>
       i make software on the web and around, mostly for
@@ -27,7 +27,7 @@
       <a target="_blank" href="https://baw.team/">baw team</a>
     </li>
     <li>i play and produce <a href="/music">music</a></li>
-    <li>occasionally i take photos</li>
+    <li>occasionally i take <a href="/gallery">photos</a></li>
   </ul>
   </p>
   <h3>my projects</h3>
